# ai_workshop_tmc

./: .env.example  .gitignore  .wget-hsts  README.md  ai_workshop_tmc.ipynb  ai_workshop_tmc.py  ai_workshop_tmc.slides.html  ai_workshop_tmc__part2.html  ai_workshop_tmc__with_handson.ipynb  docker-compose.yml  improved_rag_from_scratch_1_to_4__chat.ipynb  index.html  langgraph_rag_agent_llama3_local.ipynb  langgraph_rag_agent_llama3_local__adjusted.ipynb  part1.docx  part2.docx  tools_overview.drawio
assets/: mermaid_graph.md
backend/: Dockerfile  pyproject.toml  server.py
backend/.config/pypoetry/: pyproject.toml
backend/www/: d61d0803-fa49-4f76-8c47-d7bd7227dd24
frontend/: Dockerfile  app.py  pyproject.toml
jupyter/: Dockerfile  ai_workshop_tmc.ipynb  pyproject.toml  requirements.txt
