[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Mario Beck <22878918+marioisbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["jupyter"], version = "^24.4.2"}
streamlit = "^1.35.0"
streamlit-chat = "^0.1.1"
langchain = "^0.2.4"
langchain-community = "^0.2.4"
openai = "^1.34.0"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
