[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Mario Beck <22878918+marioisbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
langchain-community = "^0.2.5"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.8"
langchainhub = "^0.1.20"
chromadb = "^0.5.3"
langchain = "^0.2.5"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
